--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
-// COLORS
-$color-primary: orangered;
-
-// FONTS
-$font-stack: "Arial", sans-serif;
+:root {
+    --body-bg-color: #FED745;
+    --card-bg-color: #ffffff;
+    --card-text-color: #000000;
+}
