--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,17 +12,28 @@ html {
 }
 
 body {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 100%;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  font-family: "Arial", sans-serif;
-  background-color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  background-color: var(--body-bg-color);
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
 }
