--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -1,9 +1,8 @@
 /* CONTAINER */
 .container {
   width: 100%;
-  max-width: 900px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1355px;
+  padding: 0 20px;
   margin-left: auto;
   margin-right: auto;
 }
